file management system with css elements and IPC handling created

--- a/ConceptsPractice/IPC-Files/package.json
+++ b/ConceptsPractice/IPC-Files/package.json
@@ -9,8 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "electron": "^39.2.7"
-  }
+  "type": "commonjs"
 }
